--- a/restorent.html
+++ b/restorent.html
@@ -133,7 +133,7 @@
             </div>
         </aside>
     </article>
-    <article class="registation ">
+    <article class="registation container">
         <div class="left container">
             <div class="left-container">
                 <h1>registation now</h1>
